doc(readme): update `Running java-tron`.   1. Add prerequisites   2. Optimize startup script